--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     #stats #fps #fpsGraph { display: none }
 
     #blocker {
+      z-index: 10;
       position: absolute;
 
       width: 100%;
       height: 100%;
 
-      background-color: rgba(0,0,0,0.5);
+      background-color: rgba(0,0,0,0.75);
     }
 
     #instructions {
@@ -64,6 +65,14 @@
       1px -1px 0 #000,
       -1px 1px 0 #000,
       1px 1px 0 #000;  
+    }
+
+    .blurred {
+      filter:blur(5px);
+      -o-filter:blur(5px);
+      -ms-filter:blur(5px);
+      -moz-filter:blur(5px);
+      -webkit-filter:blur(5px);
     }
     </style>
   </head>
