--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     <script src="lib/FlyControls.js"></script>
     <script src="lib/PointerLockControls.js"></script>
     <script src="lib/stats.min.js"></script>
+    <script src="lib/particleengine/Pool.js"></script>
+    <script src="lib/particleengine/ShaderParticleEmitter.js"></script>
+    <script src="lib/particleengine/ShaderParticleGroup.js"></script>
     <script src="pointerlock.js"></script>
     <script src="game.js"></script>
   </body>
